feat: アセンブリ開発環境とサンプルプログラムを追加
`HELLO.ASM`というシンプルな「Hello, World!」アセンブリプログラムを追加しました。
`Makefile`を更新し、`HELLO.ASM`と、アセンブリプログラムのコンパイル・リンクに必要な`MASM.EXE`および`LINK.EXE`を`disk1`イメージに含めるようにしました。
これにより、`hidosvm`環境内でDOSアセンブリ開発とテストを行うための基本的なセットアップが整いました。

--- a/hidosvm/Makefile
+++ b/hidosvm/Makefile
@@ -5,9 +5,12 @@ hidoskvm : hidoskvm.c common.c common.h
 	$(CC) $(CFLAGS) -o hidoskvm hidoskvm.c common.c
 run: hidosvm disk1
 	./hidosvm disk1
-disk1: ../BUILD/BIN/*
+disk1: ../BUILD/BIN/* HELLO.ASM
 	dd if=/dev/zero of=disk1 bs=4096 count=16384
 	/sbin/mkfs.fat -S 4096 -F 12 disk1
 	mcopy -i disk1 ../BUILD/BIN/* ::
+	mcopy -i disk1 HELLO.ASM ::
+	mcopy -i disk1 ../MS-DOS/v2.0/bin/LINK.EXE ::
+	mcopy -i disk1 ../MS-DOS/v2.0/bin/MASM.EXE ::
 clean:
 	rm -f hidosvm hidoskvm disk1
